fix: master workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -75,8 +75,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.15.0
+
       - run: npm install
       - run: npm run build
+
       - uses: actions/upload-artifact@master
         with:
           name: build
@@ -98,12 +100,10 @@ jobs:
       - name: Copy package.json into build
         run: cp package.json build/
 
-      - name: Publish build to NPM
-        working-directory: ./build
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '18.15.0'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm publish
+      - run: cd build && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
