--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "ts-mocha test/**",
+    "test": "ts-mocha --require mocha.conf.js test/**/*.ts",
     "lint": "eslint ./src/** --ext .ts",
     "build": "tsc"
   },
@@ -22,12 +22,19 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/expect": "^24.3.0",
+    "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.11",
+    "@types/sinon": "^10.0.13",
+    "@types/sinon-chai": "^3.2.9",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^8.37.0",
+    "sinon": "^15.0.3",
+    "sinon-chai": "^3.7.0",
     "ts-mocha": "^10.0.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.3"
   }
 }
