--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,12 @@
     "node_modules/@types"
   ],
   "include": [
-    "src/**/*"
+    "src/**/*",
+    "test/**/*"
   ],
-  "exclude": [
-    "node_modules/**",
-    "test/"
+  "plugins": [
+    {
+      "name": "@typescript-eslint"
+    }
   ]
 }
