--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.15.0
+          cache: 'npm'
 
       - run: npm ci
       - run: npm run lint
@@ -53,6 +54,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.15.0
+          cache: 'npm'
 
       - run: npm ci
       - run: npm run test
