--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": true,
     "target": "ESNext",
     "declaration": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
       "*.ts": ["*"]
     }
