--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,14 @@
   "noEmit": true,
   "moduleResolution": "node",
   "compilerOptions": {
+    "moduleResolution": "node",
     "outDir": "build",
+    "module": "commonjs",
     "noImplicitAny": true,
-    "target": "ESNext",
+    "target": "ES2020",
     "declaration": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
+    "rootDir": "src/",
     "paths": {
       "*.ts": ["*"]
     }
@@ -16,6 +19,11 @@
   ],
   "include": [
     "src/**/*",
+  ],
+  "exclude": [
+    "node_modules",
+    "build",
+    "test/"
   ],
   "plugins": [
     {
